# fl-framework

./: .gitignore  README.md  final_model.pt  pyproject.toml
my_app/: __init__.py  battery_simulator.py  client_app.py  selection_strategies.py  server_app.py  strategy.py  task.py  wandb_utils.py
wandb/: latest-run
wandb/run-20251015_031125-r69mzbrj/: run-r69mzbrj.wandb
wandb/run-20251015_031125-r69mzbrj/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251015_031411-ygknep9s/: run-ygknep9s.wandb
wandb/run-20251015_031411-ygknep9s/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251015_032343-2oarijfg/: run-2oarijfg.wandb
wandb/run-20251015_032343-2oarijfg/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251015_032737-qcogyli9/files/: wandb-metadata.json
wandb/run-20251015_032759-wftwgmwu/: run-wftwgmwu.wandb
wandb/run-20251015_032759-wftwgmwu/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251015_033423-82isv4r1/: run-82isv4r1.wandb
wandb/run-20251015_033944-99pygij5/: run-99pygij5.wandb
wandb/run-20251015_034250-z5mmoe1g/: run-z5mmoe1g.wandb
wandb/run-20251015_035527-7ha0aft8/: run-7ha0aft8.wandb
wandb/run-20251015_040238-7fdgp011/: run-7fdgp011.wandb
wandb/run-20251015_123118-drz8dk8v/: run-drz8dk8v.wandb
wandb/run-20251015_123531-2wgbgmya/: run-2wgbgmya.wandb
wandb/run-20251015_124635-13ui1afh/: run-13ui1afh.wandb
wandb/run-20251015_125204-vr859zl8/: run-vr859zl8.wandb
wandb/run-20251015_131148-8cd4kz20/: run-8cd4kz20.wandb
wandb/run-20251015_131725-jd9dakwg/: run-jd9dakwg.wandb
wandb/run-20251015_134208-tnmup97a/: run-tnmup97a.wandb
wandb/run-20251015_153516-liex8apx/: run-liex8apx.wandb
(+139 files in other folders)
