# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-app"
version = "1.0.0"
description = "flwr framework"
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "wandb==0.22.2",
    "pydantic==2.7.4",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Angelo"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "my_app.server_app:app"
clientapp = "my_app.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 3
selection-fraction = 0.5
local-epochs = 5
lr = 0.01

# Selection strategy parameters
selection-strategy = "battery_aware"  # Options: "random", "battery_aware", "all_available"
alpha = 2.0  # Battery weight exponent (for battery_aware strategy)
min-battery-threshold = 0.2  # Minimum battery level (for battery_aware strategy)

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
